UIUX-1458: hide pareto chart tick values that overlap quota lines UIUX-1455: fix print styles including display dashboard in firefox, hide sort icons, hide background images in side pane, page breaks, and align top

--- a/sugarcrm/styleguide/content/css/styles.less
+++ b/sugarcrm/styleguide/content/css/styles.less
@@ -4,6 +4,10 @@
 @NavigationBar: #000000;
 @PrimaryButton: #177EE5;
 
+html {
+    height: 100%;
+}
+
 @import "../../less/fixed_variables.less";
 
 @import "../../less/twitter-bootstrap/mixins.less";
@@ -20,3 +24,4 @@
 @import "../../less/sugar-specific/tooltip.less";
 
 @import "../../less/sugar-specific/nv.d3.less";
+@import "../../less/sugar-specific/print.less";
